# digitaltwin

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  reset_db.sh
config/: config.yaml
digitaltwin/: app.py  datavis.py  objects.py  pydantic.py  streamers.py  utils.py
digitaltwin/database/: db_logger.py  make_db.py
frontend/: index.html
notebooks/: botsort.yaml  liveinference.ipynb  testing.ipynb  wildtrackdataset.ipynb
