[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "digitaltwin"
version = "0.0.1"
description = "Digital twin project"
authors = [
  { name = "Sebastian Bitsch", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["digitaltwin"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}